argo-rollouts-canary/blue-green/bluegreen-preview-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluegreen-demo-preview
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: blue-green-preview-demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bluegreen-demo-preview
            port:
              name: http
